# src/rpp_py_flask_server/rpp_py_flask_server/controllers/common_controller.py
@@ -15,24 +15,24 @@ def messages_get():  # noqa: E501
 
      # noqa: E501
 
-    :param repp_cltrid: Client transaction identifier
-    :type repp_cltrid: str
-    :param repp_svcs: Namespace used
-    :type repp_svcs: str
+    :param rpp_cltrid: Client transaction identifier
+    :type rpp_cltrid: str
+    :param rpp_svcs: Namespace used
+    :type rpp_svcs: str
     :param accept_language: Language used for response
     :type accept_language: str
-    :param repp_svcs_ext: Extension namespace used
-    :type repp_svcs_ext: str
+    :param rpp_svcs_ext: Extension namespace used
+    :type rpp_svcs_ext: str
     :param body: Default request body
     :type body: str
 
     :rtype: Union[str, Tuple[str, int], Tuple[str, int, Dict[str, str]]
     """
 
-    repp_cltrid = request.headers.get('repp_cltrid')
-    repp_svcs = request.headers.get('repp_svcs')
+    rpp_cltrid = request.headers.get('rpp_cltrid')
+    rpp_svcs = request.headers.get('rpp_svcs')
     accept_language = request.headers.get('accept_language')
-    repp_svcs_ext = request.headers.get('repp_svcs_ext')
+    rpp_svcs_ext = request.headers.get('rpp_svcs_ext')
 
 
 
@@ -45,7 +45,7 @@ def messages_get():  # noqa: E501
 
 
     try:
-        return common_impl.messages_get(repp_cltrid, repp_svcs, accept_language, repp_svcs_ext, body)
+        return common_impl.messages_get(rpp_cltrid, rpp_svcs, accept_language, rpp_svcs_ext, body)
     except NameError as e:
         raise NotImplementedError(f"Missing module common_impl: {e}")
     except AttributeError as e:
@@ -59,24 +59,24 @@ def messages_id_head(id, ):  # noqa: E501
 
     :param id: Object identifier
     :type id: str
-    :param repp_cltrid: Client transaction identifier
-    :type repp_cltrid: str
-    :param repp_svcs: Namespace used
-    :type repp_svcs: str
+    :param rpp_cltrid: Client transaction identifier
+    :type rpp_cltrid: str
+    :param rpp_svcs: Namespace used
+    :type rpp_svcs: str
     :param accept_language: Language used for response
     :type accept_language: str
-    :param repp_svcs_ext: Extension namespace used
-    :type repp_svcs_ext: str
+    :param rpp_svcs_ext: Extension namespace used
+    :type rpp_svcs_ext: str
     :param body: Default request body
     :type body: str
 
     :rtype: Union[None, Tuple[None, int], Tuple[None, int, Dict[str, str]]
     """
 
-    repp_cltrid = request.headers.get('repp_cltrid')
-    repp_svcs = request.headers.get('repp_svcs')
+    rpp_cltrid = request.headers.get('rpp_cltrid')
+    rpp_svcs = request.headers.get('rpp_svcs')
     accept_language = request.headers.get('accept_language')
-    repp_svcs_ext = request.headers.get('repp_svcs_ext')
+    rpp_svcs_ext = request.headers.get('rpp_svcs_ext')
 
 
 
@@ -90,7 +90,7 @@ def messages_id_head(id, ):  # noqa: E501
 
 
     try:
-        return common_impl.messages_id_head(id, repp_cltrid, repp_svcs, accept_language, repp_svcs_ext, body)
+        return common_impl.messages_id_head(id, rpp_cltrid, rpp_svcs, accept_language, rpp_svcs_ext, body)
     except NameError as e:
         raise NotImplementedError(f"Missing module common_impl: {e}")
     except AttributeError as e:
